src/test/ui/resolve/issue-24968.stderr
error[E0411]: use of `Self` outside of an impl or trait
  --> $DIR/issue-24968.rs:11:11
   |
11 | fn foo(_: Self) {
   |           ^^^^ used outside of impl or trait

error: aborting due to previous error

